# ProjectRegistry

./: project_tracker_handoff.md  pyproject.toml
src/project_registry/: config.py  pm.py  project_record.py  task_tracker.py  time_cli.py  tui_app.py
src/project_tracker/: config.py  pm.py  project_record.py  task_tracker.py  time_cli.py
